--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>Devank Garg's Portfolio</h1>
     <h2>I'm a web developer</h2>
     <a href="./public/birthday-invite.html">
-    <img src="./assets/images/birthday.png" height="400" alt="Birthday invite project" /></a>
+    <img src="./assets/images/birthday.png" height="400" alt="Birthday invite project" /> <br /></a>
     <a href="./public/movie-ranking.html">
     <img src="./assets/images/movie.png" height="200" alt="movie ranking project" />
 </a>
     <a href="./public/about.html">
-        About Me
+        About Me <br />
     </a>
     <a href="./public/contact.html">
         Contact Me
